# yea_fen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  a.out  rust-toolchain.toml
.github/workflows/: cargo_clippy.yml  cargo_clippy_lib.yml  chanelog.yaml  msrv.yml  publish.yaml
src/: lib.rs  moves.rs  random_engine.rs
src/chess_engines/: eval.rs  minimax.rs  mod.rs  random.rs  random_capture.rs  random_maximize_capture.rs
yea_fen/: Cargo.toml  README.md
yea_fen/src/: bit_board_move.rs  lib.rs  moves.rs  perft.rs  random.rs
yea_fen/src/chess_engines/: minimax.rs  mod.rs  random_maximize_capture.rs  simple_ai.rs
yea_fen_gui/: Cargo.toml  README.md
yea_fen_gui/src/: lib.rs  main.rs  wigets.rs
yea_fen_uci/: Cargo.toml  README.md
yea_fen_uci/src/: main.rs
