[package]
name = "yea_fen"
version = "0.1.0"
edition = "2021"
description = "Yet another FEN(Forsyth-Edwards notation) parser/library"
repository = "https://github.com/mendelsshop/yea_fen"
rust-version = "1.56.1"
categories = ["chess", "fen"]
keywords = ["chess", "fen", "fen_parser"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
