[package]
name = "yea_fen"
version = "0.1.0"
edition = "2021"
description = "Yet another FEN(Forsyth-Edwards notation) parser/library"
repository = "https://github.com/mendelsshop/yea_fen"
categories = ["chess", "fen"]
keywords = ["chess", "fen", "fen_parser"]
license = "MIT"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
